--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,9 +8,27 @@ body
     
 }
 
+#cabecera
+{
+    background: #33A;
+    box shadow: 0px 2px 20px 0px rgba(0 0 0 0.75);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm;
+
+}
+
+#cabecera #tagline
+{
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+
+}
 #container
 {
-    width:70%
+    width:70%;
     padding: 1cm;
     text align: left;
     border: 1px solid #000;
